Clean up recentering projects list, fixed project h2 spacing

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ h3 {
 }
 
 #about-me {
-  margin: 1.5em 0 0 0;
+  margin: 1em 0 0 0;
 }
 ul {
   list-style-type: none;
@@ -83,11 +83,15 @@ ul {
 
 /* projects */
 
+#projects-title {
+  margin-bottom: 1rem;
+}
+
 .project-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 2.5em;
+
   margin-top: 2em;
 }
 
@@ -121,7 +125,7 @@ ul {
   transition: all 0.5s ease;
   background-color: rgb(9, 9, 11);
   color: rgb(250, 250, 250);
-  margin: 0.5rem 0.5rem 0 0;
+  margin: 0.5rem 0.5rem 1rem 0;
 }
 
 .button-pos {
@@ -201,6 +205,7 @@ footer p {
   .project {
     position: relative;
     width: 100%;
+    margin-bottom: 2rem;
   }
 
   #project-img-1,
@@ -228,6 +233,7 @@ footer p {
     width: 100%;
     height: 0;
     transition: 0.5s ease;
+    margin-bottom: 0;
     border-radius: 5px;
   }
 
@@ -239,6 +245,7 @@ footer p {
   .project:hover {
     transition: all 0.5s ease;
     box-shadow: 0 0 50px 1px rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
   }
 
   .description {
